<resources>
    <string name="application_name">Gmail To Do</string>
    <string name="description_search">Search</string>
    <string name="description_save">Save</string>
    <string name="description_sync">Sync</string>
    <string name="description_ok">OK</string>
    <string name="description_cancel">Cancel</string>
    <string name="description_actions">Actions</string>
    <string name="description_settings">Settings</string>
    <string name="description_general_settings">General settings</string>
    <string name="description_accounts">Accounts</string>
    <string name="description_add_account">Add Gmail account</string>
    <string name="description_debug">Debug</string>
    <string name="description_offline_mode">Offline mode</string>
    <string name="description_accounts_authorized_to_sync">Accounts authorized to sync</string>
    <string name="description_privacy_settings">Privacy settings</string>
    <string name="description_anonymous_usage_analytics">Anonymous usage analytics</string>
    <string name="description_task_lists">Task Lists</string>
    <string name="description_task_list_create">Create Task List</string>
    <string name="description_task_list_open">Open Task List</string>
    <string name="description_task_list_rename">Rename Task List</string>
    <string name="description_task_list_delete">Delete Task List</string>
    <string name="description_task_list_clear_completed">Clear Completed</string>
    <string name="task_list_title_hint">task list title</string>
    <string name="dialog_task_list_create_message">Create a new list named</string>
    <string name="dialog_task_list_rename_message_pre">Rename list</string>
    <string name="dialog_task_list_rename_message_post">to</string>
    <string name="dialog_task_list_delete_message_pre">Do you want to delete the list</string>
    <string name="dialog_task_list_delete_message_post">The list will be permanently deleted</string>
    <string name="description_tasks">Tasks</string>
    <string name="description_task">Task</string>
    <string name="description_task_compose">Compose Task</string>
    <string name="description_task_edit">Edit Task</string>
    <string name="description_task_read">Open Task</string>
    <string name="description_task_discard">Discard Changes</string>
    <string name="description_task_delete">Delete Task</string>
    <string name="task_title_hint">title:</string>
    <string name="task_date_hint">due date:</string>
    <string name="task_notes_hint">notes</string>
	<string name="task_unselected">Please select a task.</string>
	<string name="example_task_list_title">Example title for task list long</string>
	<string name="example_task_sort">long sort example 1</string>
	<string name="example_task_title">Example title Account takes just a few stepsasdasdasdasd.</string>
	<string name="example_task_date">Fri, Jun 26, 2011</string>
	<string name="example_task_day">Today</string>
	<string name="example_task_note">
	Example note You can use more than one Google Account on your phone (such as your home and work accounts). Adding a Google Account takes just a few steps.\n
	You can use more than one Google Account on your phone (such as your home and work accounts). Adding a Google Account takes just a few steps.\n
	You can use more than one Google Account on your phone (such as your home and work accounts). Adding a Google Account takes just a few steps.\n
	</string>
</resources>