<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 	android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
	   	android:background="@color/task_edit_detials_paper"  > 
    <LinearLayout 
	 	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:id="@+id/taskView_taskNotFound"
	    android:visibility="gone" >
		<TextView
		 	android:layout_width="fill_parent"
			android:layout_height="wrap_content" 			
        	android:text="@string/task_unselected"
	    	android:layout_marginLeft="4dip"
	    	android:paddingTop="2dip"
	    	android:paddingBottom="2dip"
			android:textSize="@dimen/text_size_large"
			android:textColor="@color/task_textfield_color" />	
	</LinearLayout>
	<TableLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:id="@+id/taskView_taskFound" 
	    android:shrinkColumns="1"
	    android:stretchColumns="1">   
	    <TableRow
		 	android:layout_width="fill_parent"
			android:layout_height="wrap_content">   
			<CheckBox  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:id="@+id/taskView_statusCheckBox" 
		    	android:layout_marginLeft="4dip"
		        android:button="@drawable/btn_check_holo_light" />
			<TextView
			 	android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:id="@+id/taskView_titleField"				
	        	android:text="@string/example_task_title"
		    	android:layout_marginLeft="4dip"
		    	android:paddingTop="2dip"
		    	android:paddingBottom="2dip"
				android:textSize="@dimen/text_size_large"
				android:textColor="@color/task_textfield_color" />		
	    </TableRow>
	     <View
	        android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:id="@+id/taskView_detials_seperator"
			android:layout_span="2"
			android:layout_marginLeft="@dimen/textPaddingSides"
			android:layout_marginRight="@dimen/textPaddingSides" 
			android:layout_marginTop="@dimen/textPaddingSides"
			android:layout_marginBottom="@dimen/textPaddingSides" 
	        android:background="#c2c2c2" />
	    <TableRow android:id="@+id/taskView_detials_collapsed">		
		    <ImageView
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
				android:id="@+id/taskView_detials_collapsed_btn"
		        android:scaleType="center"
		        android:src="@drawable/expander_open_holo_light" /> 
			<TextView
			 	android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:id="@+id/taskView_dayField"
				android:paddingLeft="@dimen/textPaddingSides"
				android:paddingRight="@dimen/textPaddingSides"
				android:paddingTop="@dimen/textPaddingEdges"
				android:paddingBottom="@dimen/textPaddingEdges"
	        	android:text="@string/example_task_day"
				android:textColor="@color/task_textfield_color" 
				android:singleLine="true"
				android:textSize="@dimen/text_size_medium" />		
	    </TableRow>
	    <TableRow android:id="@+id/taskView_detials">
		    <ImageView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
				android:id="@+id/taskView_detials_btn"
		        android:scaleType="center"
		        android:src="@drawable/expander_close_holo_light" /> 
		    <LinearLayout
				 	android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:id="@+id/taskView_detialsLayout"
					android:orientation="vertical" >	    
				<TextView
				 	android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:id="@+id/taskView_dateField"
		        	android:text="@string/example_task_date"
					android:paddingLeft="@dimen/textPaddingSides"
					android:paddingRight="@dimen/textPaddingSides"
					android:paddingTop="@dimen/textPaddingEdges"
					android:paddingBottom="@dimen/textPaddingEdges"
					android:textColor="@color/task_textfield_color" 
					android:singleLine="true"
					android:textSize="@dimen/text_size_medium"
					/>				     
		    </LinearLayout>
	    </TableRow>
	     <View
	        android:layout_width="fill_parent"
	        android:layout_height="1dip"
			android:layout_span="2"
			android:layout_marginLeft="@dimen/textPaddingSides"
			android:layout_marginRight="@dimen/textPaddingSides" 
			android:layout_marginTop="@dimen/textPaddingSides"
			android:layout_marginBottom="@dimen/textPaddingSides" 
	        android:background="#c2c2c2" />	        
	       <ScrollView 
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:clipToPadding="false">    
			<TextView 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_span="2"
				android:textSize="@dimen/text_size_large"
	        	android:text="@string/example_task_note"
				android:id="@+id/taskView_detialsField" 
				android:paddingLeft="@dimen/textPaddingSides"
				android:paddingRight="@dimen/textPaddingSides"
				android:paddingTop="@dimen/textPaddingEdges"
				android:paddingBottom="@dimen/textPaddingEdges"
				android:textColor="@color/task_textfield_color"
				android:inputType="textMultiLine"
				android:gravity="top" />
		</ScrollView>	
	</TableLayout>		
</LinearLayout>		